log
Thu 28 Mar 2024 07:31:48 PM UTC: 
 tests:  0|6
total_score: 0/70
74dedf0
Thu 28 Mar 2024 07:35:13 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
981ceca
Thu 28 Mar 2024 07:36:48 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
0026f52
Thu 28 Mar 2024 07:37:48 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
   45 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
75e09fa
Thu 28 Mar 2024 07:38:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
9466041
Thu 28 Mar 2024 07:39:42 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
ed85b8a
Thu 28 Mar 2024 07:41:12 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 25/70
3feedf5
Thu 28 Mar 2024 07:42:41 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
afca1c2
Thu 28 Mar 2024 07:44:26 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  6|4
total_score: 25/70
f7a0435
Thu 28 Mar 2024 07:45:14 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|4
total_score: 25/70
dd2ee44
Thu 28 Mar 2024 07:45:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
1e3603e
Thu 28 Mar 2024 07:47:26 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
100a6ca
Thu 28 Mar 2024 07:48:58 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
831fbcb
Thu 28 Mar 2024 07:50:37 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
65eccb2
Thu 28 Mar 2024 07:51:53 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
f0d85e5
Thu 28 Mar 2024 07:52:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
55aab62
Thu 28 Mar 2024 07:54:20 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
f70c7cc
Thu 28 Mar 2024 07:57:17 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
f54aa36
Thu 28 Mar 2024 07:59:00 PM UTC: 
 list.c | 10 ++++------
 1 file changed, 4 insertions(+), 6 deletions(-)
 tests:  9|3
total_score: 35/70
775eb1a
Thu 28 Mar 2024 07:59:24 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
b2b1548
Thu 28 Mar 2024 08:03:13 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
2a71b9e
Thu 28 Mar 2024 08:04:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
3a4528e
